[gd_scene load_steps=5 format=3 uid="uid://bxesd0pnguwyo"]

[ext_resource type="Script" path="res://mobile_controls.gd" id="1_2vgg3"]
[ext_resource type="Script" path="res://virtual_joystick.gd" id="2_umdsk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3oj5c"]
bg_color = Color(0.2, 0.2, 0.2, 0.5)
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yqv8"]
bg_color = Color(0.6, 0.6, 0.6, 0.6)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="MobileControls" type="CanvasLayer"]
script = ExtResource("1_2vgg3")

[node name="TouchControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VirtualJoystick" type="Control" parent="TouchControls"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -50.0
grow_vertical = 0
script = ExtResource("2_umdsk")

[node name="JoystickBG" type="Panel" parent="TouchControls/VirtualJoystick"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3oj5c")

[node name="JoystickStick" type="Panel" parent="TouchControls/VirtualJoystick/JoystickBG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3yqv8")

[node name="CameraControlArea" type="Control" parent="TouchControls"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -500.0
offset_bottom = 600.0
grow_horizontal = 0

[node name="ActionButtons" type="Control" parent="TouchControls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -200.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0

[node name="ActionButton" type="Button" parent="TouchControls/ActionButtons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Action" 